Nav-item displaying wrong elements - Fix for issue with template condtion causing issues when rendering nav-items - Removed overflow hidden for corporate-header causing issues with dropdowns inside - Added a small improvement for navbar having rounded corners and spans looking strang in navigation

--- a/src/less/corporate-ui/navigation.less
+++ b/src/less/corporate-ui/navigation.less
@@ -5,6 +5,7 @@
   background-color: #fff;
   margin-bottom: 0;
   border: 0;
+  border-radius: 0;
   z-index: 1000;
   font-size: 1.4rem;
 
@@ -72,7 +73,8 @@
     .navbar-nav {
       margin: 11px 0 0 -15px;
 
-      a {
+      a,
+      span {
         font-family: "Scania Sans";
         font-size: 12px;
         color: #747472;
